hphp/hack/test/typecheck/reactive/test_mutable_return3.php.exp
File "test_mutable_return3.php", line 5, characters 19-20:
The method f1 is annotated with <<__MutableReturn>>,  so it must be marked reactive with <<__Rx>>. (NastCheck[3055])
