hphp/hack/test/typecheck/reactive/test_mutable_return3.php
<?hh // strict

class A {
  <<__MutableReturn>>
  public function f1(): A {
    return new A();
  }
}
